# Melody

./: README.md  mypy.ini  noxfile.py  pyproject.toml  run.sh
melody/: __main__.py  bot.py  config.py  database.py  exceptions.py
melody/commands/: _checks.py  checks.py  music.py  owner.py
melody/migrations/0/: migrations.sql
melody/plugins/: music.py
music/: __main__.py  config.py
music/migrations/0/: describe.json
