[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "melody"
version = "0"
description = "A music bot written in python (with rust bindings) with support for YouTube."
authors = ["CircuitSacul <circuitsacul@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
hikari = "^2.0.0.dev110"
hikari-crescent = "^0.3.2"
songbird-py = "^0.1.6"
apgorm = "^1.0.0b11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.971"
nox = "^2022.1.7"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
